# advent-of-code-2021

./: Cargo.toml  Dockerfile  README.md  cliff.toml  cog.toml  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: build.yaml  build.yml  ci.yml  dependabot.yml  machete.yml  publish-crate-after-release.yml  release.yml  rust.yml  semgrep.yml  test-release.yml  yml-lint.yml
crates/advent-of-code-2021/: Cargo.toml
crates/advent-of-code-2021/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_24.rs  day_25.rs  main.rs
src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_24.rs  day_25.rs  main.rs  shared.rs
src/day_01/: mod.rs
src/day_02/: mod.rs
src/day_03/: mod.rs
src/day_04/: mod.rs
src/day_05/: mod.rs
src/day_06/: mod.rs
src/day_07/: mod.rs
src/day_08/: mod.rs
src/day_09/: mod.rs
src/day_10/: mod.rs
src/day_11/: mod.rs
src/day_12/: mod.rs
src/day_13/: mod.rs
src/day_14/: mod.rs
src/day_15/: mod.rs
src/day_16/: mod.rs
src/day_17/: mod.rs
src/day_18/: mod.rs
src/day_19/: mod.rs
src/day_20/: mod.rs
src/day_21/: mod.rs
src/day_22/: mod.rs
src/day_24/: mod.rs
src/day_25/: mod.rs
src/shared/: mod.rs
